fix(website): :lipstick: Use white text for the header title in dark mode

--- a/src/components/HomepageHeader/styles.module.scss
+++ b/src/components/HomepageHeader/styles.module.scss
@@ -1,10 +1,10 @@
 $small: 1200px;
 
-.headerText {
-  vertical-align: middle;
+.title {
+  color: white !important;
 }
 
-.headerImage {
+.image {
   height: 300px;
   vertical-align: middle;
 }
